fix(slider): refactor overflowAuto

--- a/src/private/demos/themes/slider/brands-infinite-v1.less
+++ b/src/private/demos/themes/slider/brands-infinite-v1.less
@@ -31,7 +31,7 @@
   .slide_content {
     .link-none();
   }
-  &.slider-nooverflow {
+  &.xt-overflow-auto {
     .slides-inner {
       justify-content: center;
     }
